--- a/style.css
+++ b/style.css
@@ -4,6 +4,27 @@
   margin: 0;
 }
 
+:root {
+  --clr-primary: #a294f9;
+  --txt-lg: 2.3rem;
+}
+a {
+  text-decoration: none;
+}
+
+img {
+  aspect-ratio: 1/1;
+  max-width: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+h2 {
+  font-size: var(--txt-lg);
+}
+
 .wrapper {
   --padding: 2.5rem 5rem;
   max-width: 1400px;
@@ -15,13 +36,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40rem;
+  min-height: 40rem;
+  overflow-x: hidden;
 }
 
 .main_header::after {
   content: "";
   position: absolute;
-  background-color: #7e1891;
+  background-color: var(--clr-primary);
   inset: 0;
   height: calc(100% + 5rem);
   z-index: -1;
@@ -34,20 +56,12 @@
   padding: var(--padding);
 }
 
-a {
-  text-decoration: none;
-}
-
-img {
-  aspect-ratio: 1/1;
-  width: 100%;
-}
-
 .main_header .about .profile_image {
   float: left;
   width: var(--img-size);
   height: var(--img-size);
   transform: translate(0, -3rem);
+  z-index: 2;
   margin-right: 1rem;
   position: relative;
 }
@@ -59,20 +73,26 @@ img {
 .main_header .about .profile_image #profile_name {
   color: #fff;
   position: absolute;
-  bottom: 1rem;
-  left: 2rem;
+  width: 100%;
+  top: calc(100% - 5rem);
   font-size: 3rem;
   text-shadow: 1px 1px 5px #333;
+  text-align: center;
 }
 
 .main_header .about .profile_desc {
   background-color: #fff;
   padding: 1rem;
-  height: 25rem;
+  min-height: 25rem;
   box-shadow: 0 0 10px #333;
   border-radius: var(--border-radius);
   font-size: 1.2rem;
   color: #333;
+}
+
+.main_header .about .profile_desc p {
+  line-height: 2rem;
+  font-size: 1.5rem;
 }
 
 .main_header .about .profile_desc .heading {
@@ -81,7 +101,7 @@ img {
 }
 
 .main_header .about .profile_desc .icon_links {
-  margin-top: 7rem;
+  margin-top: 3rem;
   display: flex;
   gap: 1rem;
   justify-content: end;
@@ -107,10 +127,10 @@ img {
 .projects > :first-child {
   margin-bottom: 1rem;
 }
-.projects_container {
+.projects .projects_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, calc(33.33% - 0.8rem)));
-  justify-content: centedior;
+  grid-template-columns: repeat(auto-fit, minmax(300px, calc(33.33% - 0.8rem)));
+  justify-content: center;
   gap: 1rem;
   --project-clr-one: #074799;
   --project-clr-two: #009990;
@@ -118,11 +138,12 @@ img {
 }
 
 .projects_container > article {
-  border: 1px solid #333;
   min-height: 450px;
   display: grid;
   gap: 1rem;
   grid-template-rows: 2fr 1fr;
+  box-shadow: 0 0 5px #000;
+  border-radius: 1rem;
 }
 
 .projects_container > article header {
@@ -133,6 +154,12 @@ img {
 
 .projects_container > article .project_info {
   padding: 1rem;
+}
+
+.projects_container > article .project_img {
+  border-radius: inherit;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
 .projects_container > article:nth-child(1n) .project_img {
@@ -147,4 +174,129 @@ img {
 }
 .project_container > article:nth-child(6n) .project_img {
   background-color: var(--project-clr-three);
+}
+
+footer {
+  background: var(--clr-primary);
+  color: #111;
+  padding: 0;
+  display: flex;
+  gap: 1rem;
+  padding: var(--padding);
+  min-height: 30rem;
+  font-size: var(--heading-txt-size);
+}
+
+footer .footer_info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+footer .footer_info :not(h2) {
+  font-size: 1.3rem;
+  color: #303030;
+}
+
+footer .footer_info ul {
+  margin-top: 3rem;
+}
+
+footer .footer_img {
+  background-image: url("./asset/footer-img.jpg");
+  background-origin: center center;
+  background-size: cover;
+  width: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+  .main_header .about .profile_image {
+    --decrease: 20%;
+    width: calc(var(--img-size) - var(--decrease));
+    height: calc(var(--img-size) - var(--decrease));
+  }
+  .main_header .about .profile_image #profile_name {
+    top: 0;
+    width: 100%;
+    left: calc(100% + 0.5rem);
+    font-size: 2rem;
+  }
+
+  .main_header .about .profile_desc {
+    width: 80%;
+    min-height: 25rem;
+    padding-top: 5rem;
+    justify-self: center;
+  }
+  .main_header .about .profile_desc > * {
+    transform: translate(0, -3rem);
+  }
+
+  .main_header .about .profile_desc .icon_links {
+    margin-top: 1rem;
+  }
+
+  .main_header .about .profile_desc p {
+    font-size: 1.2rem;
+  }
+
+  .main_header .about .profile_desc .heading {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .main_header .about,
+  main .projects,
+  footer {
+    padding: 1rem 3rem;
+  }
+  .main_header .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 0;
+  }
+
+  .main_header .about .profile_image {
+    transform: translate(0, 0);
+    width: 100%;
+  }
+
+  .main_header .about .profile_image #profile_name {
+    top: calc(100% - 7rem);
+    left: 0;
+    font-size: 4rem;
+  }
+
+  .main_header .about .profile_desc {
+    padding-top: 1rem;
+    width: 100%;
+  }
+
+  .main_header .about .profile_desc > * {
+    transform: translate(0, 0);
+  }
+
+  .projects .projects_container {
+    grid-template-columns: 1fr;
+  }
+
+  projects .projects_container > article {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 645px) {
+  .main_header .about .profile_image #profile_name {
+    font-size: clamp(2.5rem, 2vw, 3.5rem);
+  }
+
+  footer {
+    flex-direction: column;
+  }
+
+  footer .footer_img {
+    height: 300px;
+  }
 }
